--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
-plugins {
-    id 'java'
-    id 'application'
-}
+apply plugin: 'java'
+apply plugin: 'application'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
 
 group 'br.pucrio.opus.smells'
 version 'v0.1.1-OPT'
@@ -11,7 +11,7 @@ repositories {
 }
 
 application {
-    mainClassName = 'br.pucrio.opus.smells.Organic'
+    mainClass.set('br.pucrio.opus.smells.Organic')
     applicationDefaultJvmArgs = ['-Xms40m','-Xmx4096m']
 }
 
@@ -21,11 +21,11 @@ sourceSets {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.osgi', name: 'org.osgi.framework', version: '1.9.0'
-    compile group: 'commons-io', name: 'commons-io', version: '2.4'
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.5'
-    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6'
-    compile group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.23.0'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.osgi', name: 'org.osgi.framework', version: '1.9.0'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.4'
+    implementation group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.5'
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6'
+    implementation group: 'org.eclipse.jdt', name: 'org.eclipse.jdt.core', version: '3.23.0'
 }
